fixed gap text with three icon

--- a/src/styles/sections/_text-with-three-icon.scss
+++ b/src/styles/sections/_text-with-three-icon.scss
@@ -28,6 +28,8 @@
                 margin-right: auto;
                 margin-left: auto;
             }
+            gap: 10px;
+        }
         }
         .text-title-container{
             flex-basis: 43%;
